add PawnPromotion and next and undo Moves

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MyGames</string>
+
+    <string-array name="pieces">
+        <item>Hetman</item>
+        <item>Wieża</item>
+        <item>Goniec</item>
+        <item>Skoczek</item>
+    </string-array>
 </resources>
