--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,19 +21,24 @@
     <string name="site_hint">Nazwa lokacji</string>
     <string name="date_hint">data partii</string>
     <string name="round_hint">runda</string>
-    <string name="white_lastname_hint">nazwisko grającego białymi</string>
+    <string name="white_lastname_hint">nazwisko/login grającego białymi*</string>
     <string name="white_firstname_hint">imię grającego białymi</string>
-    <string name="black_lastname_hint">nazwisko grającego czarnymi</string>
+    <string name="black_lastname_hint">nazwisko/login grającego czarnymi*</string>
     <string name="black_firstname_hint">imię grającego czarnymi</string>
     <string name="white_elo_hint">ranking grającego białymi</string>
     <string name="black_elo_hint">ranking grającego czarnymi</string>
     <string name="result_label">Rezultat</string>
     <string name="save_button_label">Ok</string>
+    <string name="event_error">nazwa turnieju może zawierać tylko znaki alfanumeryczne</string>
+    <string name="site_error">nazwa lokacji może zawierać tylko znaki alfanumeryczne</string>
+    <string name="lastname_error">Nazwisko lub login mogą się składać jedynie ze znaków alfanumerycznych</string>
+    <string name="empty_lastname_error">pole nazwisko/login zawodnika nie może być puste</string>
+    <string name="firstname_error">Imię może się składać jedynie z polskich znaków</string>
 
     <string-array name="results">
-        <item>1-0</item>
-        <item>1/2-1/2</item>
-        <item>0-1</item>
+        <item>Wygrały białe (1-0)</item>
+        <item>Remis (1/2-1/2)</item>
+        <item>Wygrały czarne (0-1)</item>
     </string-array>
 
     <string name="about_app">
