--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,9 @@
     <string name="about_app">
         Aplikacja bardzo dobra pozdrawiam
     </string>
+
+    <!-- fen_dialog.xml-->
+    <string name="label_select_fen">Podaj kod w formacie FEN</string>
+    <string name="label_submit">Ok</string>
+    <string name="label_cancel">Cofnij</string>
 </resources>
